examples/example_049/example_049.v
Definition unneeded := True.
Definition foo := True.
Fail Check example_049.foo.
